--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,3 +25,28 @@ push_github:
 
   rules:
     - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+$/' # semver
+
+
+# pipeline trigger if the upstream releases
+pxc_prov_upstream:
+  stage: build
+  image: tobiashvmz/pve-cloud-ci:2025121321
+  script:
+    # update all versions.tf files with the new provider tag
+    - 'find . -type f -name "versions.tf" -exec sed -i "s/version.*pxc/version = \">~ ${PXC_PROV_VERSION}\" # pxc/" {} +'
+    - /scripts/upstream-push.sh "Update pxc provider version to $PXC_PROV_VERSION"
+  rules:
+    - if: ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
+
+
+trigger_upstream_release_tag:
+  stage: deploy
+  image: alpine/curl:8.14.1
+  script:
+    - |
+      curl --request POST \
+        --form "token=${CI_JOB_TOKEN}" \
+        --form "ref=${UPSTREAM_TAG_MESSAGE}" \
+        "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/trigger/pipeline"
+  rules:
+    - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
