--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,17 @@ push_github:
   rules:
     - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+$/' # semver
 
+pve_cloud_controller_upstream:
+  stage: build
+  image: tobiashvmz/pve-cloud-ci:2025122113
+  script:
+    # write the new version
+    - sed -i "s/var\.cloud_controller_version\s==\s\?\snull\s?\s\".*\"/var.cloud_controller_version == null ? \"${PVE_CLOUD_CONTROLLER}\"/" variables.tf
+    - /scripts/upstream-push.sh "Update pve-cloud-controller version to ${PVE_CLOUD_CONTROLLER}"
+    # todo: maybe merge on paralellism
+  rules:
+    - if: ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ ) # set by upstream
+  resource_group: deploy-prod # paralellism through single build call
 
 # pipeline trigger if the upstream releases
 pxc_prov_upstream:
@@ -38,6 +49,7 @@ pxc_prov_upstream:
     # todo: maybe merge on paralellism
   rules:
     - if: ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
+  resource_group: deploy-prod
 
 
 trigger_upstream_release_tag:
@@ -53,13 +65,3 @@ trigger_upstream_release_tag:
     - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
     - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ )
 
-pve_cloud_controller_upstream:
-  stage: build
-  image: tobiashvmz/pve-cloud-ci:2025122113
-  script:
-    # write the new version
-    - sed -i "s/var\.cloud_controller_version\s==\s\?\snull\s?\s\".*\"/var.cloud_controller_version == null ? \"${PVE_CLOUD_CONTROLLER}\"/" variables.tf
-    - /scripts/upstream-push.sh "Update pve-cloud-controller version to ${PVE_CLOUD_CONTROLLER}"
-    # todo: maybe merge on paralellism
-  rules:
-    - if: ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ ) # set by upstream
