--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,3 +65,31 @@ trigger_upstream_release_tag:
     - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
     - if: $UPSTREAM_TAG_MESSAGE =~ /-all-/ && ( $PVE_CLOUD_CONTROLLER != null || $PVE_CLOUD_CONTROLLER =~ /^./ )
 
+format_source:
+  stage: build
+  image: tobiashvmz/pve-cloud-pyci:2026010412
+  script:
+    - git config --global user.name "$GITLAB_USER_NAME"
+    - git config --global user.email "$GITLAB_USER_EMAIL"
+    
+    - autoflake --in-place --recursive .
+    - black .
+    - isort .
+    # commit the changes
+    - |
+      if ! git diff --quiet; then
+        git add .
+        git commit -m "Format and cleanup pipeline"
+        git push origin HEAD:$CI_COMMIT_REF_NAME
+      else
+        echo "Nothing to clean or format!"
+      fi
+  rules:
+    - if: >
+        $CI_COMMIT_TAG !~ /^\d+\.\d+\.\d+$/ &&
+        $CI_COMMIT_TAG !~ /^release-[a-z]+$/ &&
+        $CI_COMMIT_TAG !~ /^release-all-[a-z]+$/ &&
+        $CI_PIPELINE_SOURCE == 'push'
+      when: on_success
+    - when: never
+  resource_group: deploy-prod
