--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ rc_tag:
     - if: '$CI_COMMIT_TAG =~ /^rc-[a-z]+$/'
   resource_group: deploy-prod
 
+
 # push the new tag to github so the terraform registry picks it up
 push_github:
   stage: deploy
@@ -43,6 +44,7 @@ push_rc_github:
     - git push github $CI_COMMIT_TAG
   rules:
     - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+-rc\d+$/' # release candidate
+
 
 pve_cloud_controller_upstream:
   stage: build
@@ -72,6 +74,7 @@ pve_cloud_controller_rc_upstream:
     - if: '$PVE_CLOUD_CONTROLLER != null && $PVE_CLOUD_CONTROLLER != "" && $UPSTREAM_TAG_MESSAGE =~ /^rc-.*/' # set by upstream
   resource_group: deploy-prod # paralellism through single build call
 
+
 # pipeline trigger if the upstream releases
 pxc_prov_upstream:
   stage: build
@@ -80,10 +83,26 @@ pxc_prov_upstream:
     # update all versions.tf files with the new provider tag
     - 'find . -type f -name "versions.tf" -exec sed -i "s/version.*pxc/version = \"~>${PXC_PROV_VERSION}\" # pxc/" {} +'
     - /scripts/upstream-push.sh "Update pxc provider version to $PXC_PROV_VERSION"
-    # todo: maybe merge on paralellism
   rules:
-    - if: ( $PXC_PROV_VERSION != null || $PXC_PROV_VERSION =~ /^./ ) # set by upstream
+    - if: '$PXC_PROV_VERSION != null && $PXC_PROV_VERSION != "" && $UPSTREAM_TAG_MESSAGE =~ /^release-.*/' # set by upstream
   resource_group: deploy-prod
+
+pxc_prov_rc_upstream:
+  stage: build
+  image: docker.io/tobiashvmz/pve-cloud-ci:202601081028
+  script:
+    # get the latest prod tag
+    - new_tag=$(/scripts/get-new-tag.sh)
+    - echo $new_tag
+    # switch to rc branch
+    - /scripts/rc-branch.sh $new_tag
+    # update all versions.tf files with the new provider tag
+    - 'find . -type f -name "versions.tf" -exec sed -i "s/version.*pxc/version = \"${PXC_PROV_VERSION}\" # pxc/" {} +'
+    - /scripts/upstream-push.sh "Set pxc provider rc version to $PXC_PROV_VERSION"
+  rules:
+    - if: '$PXC_PROV_VERSION != null && $PXC_PROV_VERSION != "" && $UPSTREAM_TAG_MESSAGE =~ /^rc-.*/' # set by upstream
+  resource_group: deploy-prod
+
 
 format_source:
   stage: build
@@ -91,7 +110,6 @@ format_source:
   script:
     - git config --global user.name "$GITLAB_USER_NAME"
     - git config --global user.email "$GITLAB_USER_EMAIL"
-    
     - autoflake --in-place --recursive .
     - black .
     - isort .
