--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ pxc_prov_rc_upstream:
     - /scripts/rc-branch.sh $new_tag
     # update all versions.tf files with the new provider tag
     - 'find . -type f -name "versions.tf" -exec sed -i "s/version.*pxc/version = \"${PXC_PROV_VERSION}\" # pxc/" {} +'
-    - /scripts/upstream-push.sh "Set pxc provider rc version to $PXC_PROV_VERSION"
+    - /scripts/upstream-push.sh "Set pxc provider rc version to $PXC_PROV_VERSION" "${new_tag}-rc"
   rules:
     - if: '$PXC_PROV_VERSION != null && $PXC_PROV_VERSION != "" && $UPSTREAM_TAG_MESSAGE =~ /^rc-.*/' # set by upstream
   resource_group: deploy-prod
