trigger argo wf

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,26 @@
+trigger_argo_wf:
+  stage: build
+  image: tobiashvmz/pve-cloud-ci:202601261948
+  script:
+    - export KUBECONFIG=$ARGO_KUBECONFIG
+
+    - build_type=${CI_COMMIT_TAG%-*}
+    - build_increment=${CI_COMMIT_TAG#*-}
+
+    - |
+      argo submit -n argo --watch \
+        -p "git_host=$CI_SERVER_HOST" -p "git_pull_prefix=git@$CI_SERVER_HOST:$CI_PROJECT_NAMESPACE" \
+        -p "git_user=$GITLAB_USER_NAME" -p "git_email=$GITLAB_USER_EMAIL" \
+        -p "build_increment=$build_increment" -p "build_type=$build_type" \
+        --entrypoint terraform-pxc-controller-entry /scripts/argo-dag-wf.yaml
+
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
+    - if: '$CI_COMMIT_TAG =~ /^rc-[a-z]+$/'
+
 format_source:
   stage: build
-  image: tobiashvmz/pve-cloud-pyci:202601090831
+  image: tobiashvmz/pve-cloud-pyci:202601261949
   script:
     - git config --global user.name "$GITLAB_USER_NAME"
     - git config --global user.email "$GITLAB_USER_EMAIL"
@@ -25,4 +45,3 @@ format_source:
         $CI_PIPELINE_SOURCE == 'push'
       when: on_success
     - when: never
-  resource_group: deploy-prod
