--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ trigger_argo_wf:
         -p "build_increment=$build_increment" -p "build_type=$build_type" \
         --entrypoint terraform-pxc-controller-entry /scripts/argo-dag-wf.yaml
 
+  timeout: 2h
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
     - if: '$CI_COMMIT_TAG =~ /^rc-[a-z]+$/'
