--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,13 +8,12 @@ trigger_argo_wf:
     - build_increment=${CI_COMMIT_TAG#*-}
 
     - |
-      argo submit -n argo --wait \
+      argo submit -n argo \
         -p "git_host=$CI_SERVER_HOST" -p "git_pull_prefix=git@$CI_SERVER_HOST:$CI_PROJECT_NAMESPACE" \
         -p "git_user=$GITLAB_USER_NAME" -p "git_email=$GITLAB_USER_EMAIL" \
         -p "build_increment=$build_increment" -p "build_type=$build_type" \
         --entrypoint terraform-pxc-controller-entry /scripts/argo-dag-wf.yaml
 
-  timeout: 2h
   rules:
     - if: '$CI_COMMIT_TAG =~ /^release-[a-z]+$/'
     - if: '$CI_COMMIT_TAG =~ /^rc-[a-z]+$/'
